--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   
   <body>
-  
-    <script src="script.js"></script>
+  <h1>Jomir's Pokedex</h1>
+  <ul id="pokedex"></ul>
+  <script src="script.js"></script>
   </body>
 </html>
