displayed pokemon objects on screen

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
   <form id="search"> 
     Please enter the pokemon number: <input type="text"> <button type="button" id="searchbtn" onclick="queryPokemonAPI()">Random</button>
   </form>
+  <div id="page">
+    <p></p>
+  </div>
 
-  <p></p>
+  
   
   <ul id="pokedex"></ul>
   <script src="script.js"></script>
