--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   
   <body>
   <h1>Jomir's Pokedex</h1>
+  <div id="trainersprite"><img src="poketrainer.png" alt="Trainer"></div>
 
 
   
   <form id="search"> 
-    Please enter the pokemon number: <input type="text"> <button type="button" id="searchbtn" onclick="queryPokemonAPI()">Random</button>
+    Please enter the pokemon number: <input type="text"> <button type="button" id="searchbtn" onclick="queryPokemonAPI()">Seach by ID</button>
   </form>
   <div id="page">
     <p></p>
