styled search button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
   <h1>Jomir's Pokedex</h1>
   <div id="trainersprite"><img src="poketrainer.png" alt="Trainer"></div>
-  <div id="search">
-    <button type="button" id="searchbtn" onclick="queryPokemonAPI()">Search by ID</button>
+  
+  <div class="myButton">
+    <button type="button" id="searchbtn" onclick="queryPokemonAPI()">Choose Your Pokemon</button>
   </div>
 
   
