compiled to SASS

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
   <h1>Jomir's Pokedex</h1>
   <div id="trainersprite"><img src="poketrainer.png" alt="Trainer"></div>
   
-  <div class="myButton">
-    <button type="button" id="searchbtn" onclick="queryPokemonAPI()">Choose Your Pokemon</button>
+  <div id="button">
+  <button type="button" class="myButton" onclick="queryPokemonAPI()">Choose Your Pokemon</button>
   </div>
 
-  
-  
   <ul id="pokedex"></ul>
   <script src="script.js"></script>
   </body>
